New:

* Defined accessors for class fields.
* New fields: package, file, line, subroutine.
* Exception::Base->new() collects system data.
* $e->throw() does not overrides existing caller stack.
* New "$e->throw(overriden=>'value')" syntax for rethrowing the exception with
  overriden some field.
* New "Exception::Base->throw($e, ...)" syntax for rethrowing the exception
  with changed own class.

------------------------------------------------------------------------
0.08 | Piotr Roszatycki <dexter@debian.org> | 2007-10-06

New:

* use Exception::Base ':all'.
* Removed " foo at file line 123." string for caught standard die message.
* Removed also the end of line (LF) for caught standard die message.
* The system data are not collected with verbosity level lower than 2.

Minor changes:

* Switched to Module::Build.
* Updated bundled Test::Unit::Lite to 0.05.
* Replaced some textevals with closures or pure references.
* Does not use Scalar::Util::blessed() and Carp::croak().
* Updated benchmark results in documentation.

------------------------------------------------------------------------
0.07 | Piotr Roszatycki <dexter@debian.org> | 2007-05-18

Fixed error:

* Load base class of newly created exception before checking its default
  properties.

------------------------------------------------------------------------
0.06 | Piotr Roszatycki <dexter@debian.org> | 2007-05-18

* Can define default value for rw properties with "use".
* Does not undefine other typeglobs than CODE with "unimport".

------------------------------------------------------------------------
0.05 | Piotr Roszatycki <dexter@debian.org> | 2007-05-11

* Added bundled Test/Unit/Lite.pm to MANIFEST.

------------------------------------------------------------------------
0.04 | Piotr Roszatycki <dexter@debian.org> | 2007-05-11

* use 5.006
* Test with bundled Test::Unit::Lite, so there is no dependency on
  non-core modules.